--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-﻿.my-dark-blue-text {
+.my-dark-blue-text {
     color: #13B1B4 !important;
 }
 .my-dark-blue-bg {
@@ -6,6 +6,9 @@
 }
 .my-light-blue-text {
     color: #BDEDF1 !important;
+}
+.my-light-black-text {
+    color: #000000;
 }
 .my-light-blue-bg {
     background-color: #BDEDF1 !important;
@@ -182,7 +185,9 @@ body {
 .large-font {
     font-size: 100px;
 }
-
+.small-font {
+    font-size: 50px;
+}
 .translucent-bg {
     background-color: rgba(255, 255, 255, 0.5);
     width: 100%;
@@ -203,6 +208,13 @@ body {
     padding-left: 10%;
     padding-right: 10%;
     font-size: 20px;
+}
+.content-row-transparent {
+    padding: 50px;
+    padding-left: 10%;
+    padding-right: 10%;
+    font-size: 20px;
+    opacity: 1
 }
 
     .content-row:nth-child(odd) {
