--- a/style.css
+++ b/style.css
@@ -29,8 +29,11 @@ body {
 }
 
 .logo {
-    flex: 3;
+    /*flex: 3;*/
+    width: 50%;
     display: table-cell;
+    white-space: nowrap;
+    overflow: visible;
 }
 
     .logo > span:hover {
@@ -43,6 +46,30 @@ body {
     padding-left: 10px;
     font-weight: bold;
     vertical-align: middle;
+}
+
+@media screen and (max-width: 580px)
+{
+    .title {
+        font-size: 26px;
+    }
+}
+@media screen and (max-width: 480px) {
+    .title {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .title {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .title {
+        font-size: 12px;
+    }
 }
 
 
@@ -60,14 +87,35 @@ body {
 }
 
 #nav-menu-div {
-    width: 100%;
+    width: 50%;
     text-align: center;
-    flex: 3;
+    /*flex: 3;*/
 }
+
+
 
 #nav-menu-ul {
     display: flex;
     height: 100%;
+}
+
+#nav-collapsed {
+    display: none;
+    height: 100%;
+    float: right;
+    text-align: center;
+    font-size: 56px;
+    margin-right: 10px;
+    color: #13B1B4;
+}
+
+@media screen and (max-width: 1040px) {
+    #nav-menu-ul {
+        display: none;
+    }
+    #nav-collapsed {
+        display: block;
+    }
 }
 
 .my-nav-pills > .li {
@@ -129,6 +177,7 @@ body {
         border-width: 2px;
         border-color: cornflowerblue;*/
     padding: 0px;
+    margin-top: 80px;
 }
 
 #footer {
@@ -139,6 +188,7 @@ body {
     width: auto;
     /*height: 700px;*/
     max-height: 700px;
+    /*min-height: 700px;*/
 }
 
 #carousel-div {
@@ -151,8 +201,8 @@ body {
 
 #carousel-image {
     /*border-radius: 20px;*/
-    width: 100px;
-    height: 100px;
+    /*width: 100px;
+    height: 100px;*/
     /*position: relative;
         z-index: -1;*/
 }
@@ -162,11 +212,43 @@ body {
     top: 40%;
     left: 30%;
     transform: translate(-50%, -50%);
-    font-size: 70px;
     color: white;
     text-shadow: 2px 2px 10px black;
 }
 
+.pic-1-text {
+    font-size: 70px;
+}
+@media screen and (max-width: 1400px) {
+    .pic-1-text {
+        font-size: 54px;
+    }
+}
+@media screen and (max-width: 1100px) {
+    .pic-1-text {
+        font-size: 40px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .pic-1-text {
+        font-size: 30px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .pic-1-text {
+        font-size: 24px;
+    }
+}
+@media screen and (max-width: 480px) {
+    .pic-1-text {
+        font-size: 20px;
+    }
+}
+@media screen and (max-width: 400px) {
+    .pic-1-text {
+        font-size: 16px;
+    }
+}
 .top-center {
     position: absolute;
     top: 0px;
@@ -236,7 +318,6 @@ body {
 }
 
 #mission-label {
-    flex: 1;
     text-align: center;
     font-size: 40px;
     font-weight: bold;
@@ -245,16 +326,17 @@ body {
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     vertical-align: middle;
+    width: 25%;
 }
 
 #mission-content {
-    flex: 3;
     padding: 10px;
     border: solid;
     border-color: #BDEDF1;
     border-width: 5px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+    width: 75%;
 }
 
 .clickable-card {
@@ -270,6 +352,24 @@ body {
         cursor: pointer;
         box-shadow: 4px 4px 20px 4px darkgray;
     }
+
+.side-stack-3 {
+    width: 33.33333%;
+}
+
+@media screen and (max-width: 768px)
+{
+    .side-stack-3 {
+        width: 100%;
+    }
+    .card-container {
+        display: block;
+    }
+    .clickable-card {
+        margin: 0px;
+        margin-bottom: 15px;
+    }
+}
 
 .shadow {
     box-shadow: 1px 1px 10px black;
@@ -399,3 +499,52 @@ flex-1 {
     }
 
 /******************************************************/
+
+
+/***************************************
+    SIDE NAV
+****************************************/
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    overflow-x: hidden;
+    background-color: white;
+    transition: 0.5s;
+    padding-top: 100px;
+}
+
+    .sidenav a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #13B1B4;
+        display: block;
+        transition: 0.3s;
+    }
+
+        .sidenav a:hover {
+            color: #BDEDF1;
+        }
+
+    .sidenav .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+        padding-top: 80px;
+    }
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 80px;
+    }
+
+        .sidenav a {
+            font-size: 18px;
+        }
+}
