--- a/Videos/style.css
+++ b/Videos/style.css
@@ -1,7 +1,5 @@
 .event-content {
-    flex: 1;
-    padding-left: 20px;
-    padding-right: 20px;
+    /*flex: 1;*/
     font-size: 18px;
 }
 
@@ -42,4 +40,37 @@ body {
     padding: 10px;
     font-family: Arial, sans-serif;
     font-size: 10pt;
+}
+
+
+.page {
+    height:100%;
+    text-align: center;
+}
+
+.popup {
+    position:absolute;
+    z-index:2;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,0.75);
+    opacity:0;
+    visibility:hidden;
+    transition:.3s ease;
+}
+
+.show-popup .popup {
+    opacity:1;
+    visibility: visible;
+}
+
+.popup > iframe {
+    position: center;
+    top: 10%;
+    /*padding: 10%;*/
+    margin: auto;
+    text-align: center;
+
 }
