--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ body {
 }
 
 .clickable-card {
-    margin: 15px;
+    //margin: 15px;
     /*border: solid;
         border-width: 2px;
         border-color: transparent;*/
@@ -375,7 +375,7 @@ body {
     width: 33.33333%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1100px) {
     .side-stack-3 {
         width: 100%;
     }
@@ -385,7 +385,6 @@ body {
     }
 
     .clickable-card {
-        margin: 0px;
         margin-bottom: 15px;
     }
 }
@@ -402,18 +401,19 @@ body {
 
 .card-body {
     padding: 10px;
+    height: 100%
 }
 
 .image-div {
     position: relative;
     width: 100%;
-    max-height: 250px;
+    max-height: 500px;
     overflow: hidden;
 }
 
 .image {
-    max-width: 100%;
     overflow: hidden;
+    width: 100%
 }
 
 .header-image-div {
