--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
 
     .nav-menu-left {
         width: 100%;
+        margin-right: 58px;
     }
 }
 
@@ -127,6 +128,9 @@ body {
     margin-right: 10px;
     color: #13B1B4;
     cursor: pointer;
+}
+#nav-collapsed:hover {
+    opacity: 0.6;
 }
 
 @media screen and (max-width: 1040px) {
